<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:alignmentMode="alignBounds"
        android:columnCount="5"
        android:columnOrderPreserved="false"

        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:useDefaultMargins="true"
        tools:context=".activities.LoginActivity">


        <ImageView
            android:id="@+id/iv_logo_login"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_columnSpan="4"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/social" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_login_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/user"
                android:inputType="textEmailAddress"
                android:shadowColor="#9ec54e" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4">

            <EditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_columnSpan="4"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/login" />


        <Button
            android:id="@+id/btn_google_login"
            style="@style/BtnLogin"
            android:layout_columnSpan="4"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/google_login" />


        <Button
            android:id="@+id/btn_signup_login"
            style="@style/BtnLogin"
            android:layout_columnSpan="4"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/signup" />

        <Button
            android:id="@+id/btn_facebook_login"
            style="@style/BtnLogin"
            android:layout_columnSpan="4"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/facebook_login" />

    </GridLayout>
</ScrollView>